chore: update tabs

--- a/docs/api-contract-tests.mdx
+++ b/docs/api-contract-tests.mdx
@@ -3,8 +3,6 @@ title: "Configure Custom API Contract Tests"
 description: "Learn how to generate contract and end-to-end tests for your API and SDKs using the Arazzo workflow specification."
 ---
 
-;
-
 
 <Callout title="Early access" type="warning">
 
@@ -166,11 +164,9 @@ The above workflow defined 4 steps that each feed into the next, representing th
 
 It will generate the test shown below:
 
-<Tabs items={['TypeScript', 'Python', 'Go']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 // src/__tests__/sdk.test.ts
 
 import { assert, expect, it, test } from "vitest";
@@ -265,11 +261,7 @@ test("Sdk User Lifecycle", async () => {
 });
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 # tests/test_sdk.py
 
 import io
@@ -364,11 +356,7 @@ def test_sdk_user_lifecycle():
         sdk.delete_user(id=create_res.id)
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```go
+```go !!tabs Go
 // tests/sdk_test.go
 
 package sdk_test
@@ -470,9 +458,7 @@ func TestSDK_UserLifecycle(t *testing.T) {
 }
 ```
 
-</Tabs.Tab>
-
-</Tabs>
+</CodeWithTabs>
 
 ## Input and Outputs
 
