--- a/docs/customize/authentication/configuration.mdx
+++ b/docs/customize/authentication/configuration.mdx
@@ -38,11 +38,9 @@ security: # Here
 
 In the resulting SDK, the user can define the security configuration in the SDK's instantiation. It will then be automatically applied to all subsequent method calls without needing to be passed in as an argument:
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { SDK } from "speakeasy";
 
 async function run() {
@@ -59,11 +57,7 @@ async function run() {
 run();
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 import sdk
 
 s = sdk.SDK(
@@ -78,11 +72,7 @@ if res.drinks is not None:
     pass
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```go
+```go !!tabs Go
 package main
 
 import (
@@ -108,11 +98,7 @@ func main() {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```java
+```java !!tabs Java
 package hello.world;
 
 import dev.speakeasyapi.speakeasy.SDK;
@@ -150,11 +136,7 @@ public class Application {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 using Speakeasy;
 using Speakeasy.Models.Components;
 
@@ -177,12 +159,7 @@ catch (Exception ex)
 }
 ```
 
-</Tabs.Tab>
-
-
-<Tabs.Tab>
-
-```php
+```php !!tabs PHP
 declare(strict_types=1);
 
 require 'vendor/autoload.php';
@@ -208,8 +185,7 @@ try {
 }
 ```
 
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ### Per-Operation Security
 
@@ -246,11 +222,9 @@ security:
 
 In the SDK, the user can pass in a specific security configuration as an argument to the method call:
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { SDK } from "speakeasy";
 
 async function run() {
@@ -267,11 +241,7 @@ async function run() {
 run();
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 import sdk
 
 s = sdk.SDK()
@@ -283,11 +253,7 @@ if res.drinks is not None:
     pass
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```go
+```go !!tabs Go
 package main
 
 import (
@@ -315,11 +281,7 @@ func main() {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```java
+```java !!tabs Java
 package hello.world;
 
 import dev.speakeasyapi.speakeasy.SDK;
@@ -359,11 +321,7 @@ public class Application {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 using Speakeasy;
 using Speakeasy.Models.Components;
 
@@ -386,11 +344,7 @@ catch (Exception ex)
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```php
+```php !!tabs PHP
 declare(strict_types=1);
 
 require 'vendor/autoload.php';
@@ -415,9 +369,7 @@ try {
 }
 ```
 
-</Tabs.Tab>
-
-</Tabs>
+</CodeWithTabs>
 
 ## Environment Variables
 
