--- a/docs/customize/authentication/custom-security-schemes.mdx
+++ b/docs/customize/authentication/custom-security-schemes.mdx
@@ -58,10 +58,9 @@ components:
 
 Once the SDK is regenerated, the custom security scheme can be configured globally or per operation, depending on the `security` definitions.
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-```typescript
+```typescript !!tabs TypeScript
 import { SDK } from "openapi";
 
 const sdk = new SDK({
@@ -72,9 +71,8 @@ secret: "MTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTI",
 });
 
 ```
-</Tabs.Tab>
-<Tabs.Tab>
-```python
+
+```python !!tabs Python
 import openapi
 from openapi import SDK
 
@@ -84,11 +82,9 @@ s = SDK(
       secret="MTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTI",
   ),
 )
-````
+```
 
-</Tabs.Tab>
-<Tabs.Tab>
-```go
+```go !!tabs Go
 package main
 
 import (
@@ -106,9 +102,8 @@ Secret: "MTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTI",
 )
 
 ```
-</Tabs.Tab>
-<Tabs.Tab>
-```java
+
+```java !!tabs Java
 import org.openapis.openapi.SDK;
 import org.openapis.openapi.models.shared.Security;
 
@@ -119,8 +114,7 @@ SDK sdk = SDK.builder()
             .build())
         .build();
 ```
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ### Use the custom security scheme
 
@@ -128,10 +122,9 @@ Use [SDK Hooks](/docs/customize/code/sdk-hooks) to access user-provided security
 
 The following example illustrates accessing a custom security scheme in a hook and adding headers to a request:
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-```typescript
+```typescript !!tabs TypeScript
 import { Security$outboundSchema } from "../models/components/security.js";
 import { BeforeRequestContext, BeforeRequestHook } from "./types.js";
 
@@ -157,9 +150,7 @@ export class CustomSecurityHook implements BeforeRequestHook {
 }
 ```
 
-</Tabs.Tab>
-<Tabs.Tab>
-```python
+```python !!tabs Python
 import requests
 from openapi import SDK
 from typing import Union
@@ -179,9 +170,8 @@ security = hook_ctx.security_source
     return request
 
 ```
-</Tabs.Tab>
-<Tabs.Tab>
-```go
+
+```go !!tabs Go
 package hooks
 
 import (
@@ -215,9 +205,7 @@ func (h *CustomSecurityHook) BeforeRequest(hookCtx BeforeRequestContext, req *ht
 
 ```
 
-</Tabs.Tab>
-<Tabs.Tab>
-```java
+```java !!tabs Java
 import java.net.http.HttpRequest;
 
 import org.openapis.openapi.models.shared.Security;
@@ -243,5 +231,5 @@ public class CustomSecurityHook implements BeforeRequest {
     }
 }
 ```
-</Tabs.Tab>
-</Tabs>
+
+</CodeWithTabs>
