--- a/docs/customize/authentication/oauth.mdx
+++ b/docs/customize/authentication/oauth.mdx
@@ -9,7 +9,7 @@ description: "Customize your security and authentication SDK settings for OAuth.
 # OAuth 2.0 authentication
 
 Speakeasy fully supports the OAuth 2.0 security implementation. This includes type generation for OAuth schemas and in many cases
-the complete management of the token refresh flow. End users of Speakeasy SDKs don’t need to retrieve and manage access tokens manually.
+the complete management of the token refresh flow. End users of Speakeasy SDKs don't need to retrieve and manage access tokens manually.
 
 API builders also have the option to leverage Speakeasy's [custom security schemes](/docs/customize/authentication/custom-security-schemes) to implement custom OAuth flows that aren't part of
 the standard OpenAPI specification.
@@ -169,11 +169,9 @@ generation:
     OAuth2ClientCredentialsEnabled: true
 ```
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { SDK } from "speakeasy";
 
 async function run() {
@@ -193,11 +191,7 @@ async function run() {
 run();
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 import speakeasy
 from speakeasy.models import components
 
@@ -216,11 +210,7 @@ if res.drinks is not None:
     pass
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```go
+```go !!tabs Go
 package main
 
 import (
@@ -249,11 +239,7 @@ func main() {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```java
+```java !!tabs Java
 package hello.world;
 
 import dev.speakeasyapi.speakeasy.SDK;
@@ -294,11 +280,7 @@ public class Application {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 using Speakeasy;
 using Speakeasy.Models.Components;
 
@@ -325,9 +307,7 @@ catch (Exception ex)
 }
 ```
 
-</Tabs.Tab>
-<Tabs.Tab>
-```php
+```php !!tabs PHP
 use Speakeasy\Client\Credentials;
 use Speakeasy\Client\Credentials\Models\Components;
 use Speakeasy\Client\Credentials\Models\Operations;
@@ -350,8 +330,7 @@ try {
     // handle exception
 }
 ```
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ## Resource Owner Password Credentials flow
 Also known informally as OAuth 2.0 Password flow.
@@ -401,18 +380,24 @@ generation:
 
 When making a call using this flow, the SDK security is configured with these parameters:
 
-| Parameter                    | Notes                                                                                  | 
-| ---------------------------- | --------------------------------------------------------------------------------------------|
-| `username`         | mandatory         |   
-| `password`         | mandatory         | 
-| `clientID`         | optional          |
-| `clientSecret`     | optional          |
+<Table
+  columns={[
+    { key: "parameter", header: "Parameter" },
+    { key: "notes", header: "Notes" }
+  ]}
+  data={[
+    { parameter: "`username`", notes: "mandatory" },
+    { parameter: "`password`", notes: "mandatory" },
+    { parameter: "`clientID`", notes: "optional" },
+    { parameter: "`clientSecret`", notes: "optional" }
+  ]}
+/>
 
 Below are usage examples in different languages:
 
-<Tabs items={['TypeScript','Java']}>
-<Tabs.Tab>
-```typescript Typescript
+<CodeWithTabs>
+
+```typescript !!tabs TypeScript
 const sdk = new SDK({
     oauth2: {
       username: "testuser",
@@ -424,9 +409,8 @@ const sdk = new SDK({
 
 const result = await sdk.listProducts();
 ```
-</Tabs.Tab>
-<Tabs.Tab>
-```java Java
+
+```java !!tabs Java
 SDK sdk = SDK.builder() 
     .oauth2(Oauth2Input.of( 
         Oauth2Credentials.builder()
@@ -438,30 +422,26 @@ SDK sdk = SDK.builder()
     .build();
 ListProductsResponse res = sdk.listProducts().call();
 ```
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 It is also possbile to bypass token retrievals by passing an explicit token to the SDK object:
 
-<Tabs items={['TypeScript','Java']}>
-<Tabs.Tab>
-```typescript Typescript
+<CodeWithTabs>
+```typescript !!tabs TypeScript
 const sdk = new SDK({
     oauth2: "THE_TOKEN"
-}};
+});
 
 const result = await sdk.listProducts();
 ```
-</Tabs.Tab>
-<Tabs.Tab>
-```java Java
+
+```java !!tabs Java
 SDK sdk = SDK.builder() 
     .oauth2(Oauth2Input.of("THE_TOKEN"))
     .build();
 ListProductsResponse res = sdk.listProducts().call();
 ```
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ## Authorization code flow
 
@@ -471,8 +451,7 @@ The format for the secret values can also vary but a very common format is:
 
 ```html
 <Term>
-  <Base64><Client ID />:<Client Secret /></Base64
-></Term>
+  <Base64><Client ID />:<Client Secret /></Base64></Term>
 ```
 
 - `<Term>` often being `Basic` or `Bearer`
@@ -522,11 +501,9 @@ This custom security schema allows us to supply the Id and Secret needed for the
 
 Next we add the hook to generate that header.
 
-<Tabs items={['Typescript']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import type {BeforeRequestContext, BeforeRequestHook, Hooks} from "./types.js";
 import {GetTokenSecurity} from "../models/operations/gettoken.js";
 import {stringToBase64} from "../lib/base64.js";
@@ -558,17 +535,13 @@ class OAuthTokenRequestHook implements BeforeRequestHook {
 }
 ```
 
-</Tabs.Tab>
-
-</Tabs>
+</CodeWithTabs>
 
 Now that the hook is added, when you are using the SDK to acquire an OAuth token, you can pass in the values and the hook will generate the special header for you.
 
-<Tabs items={['Typescript']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { SDK } from "SDK";
 
 const sdk = new SDK();
@@ -590,9 +563,7 @@ async function run() {
 run();
 ```
 
-</Tabs.Tab>
-
-</Tabs>
+</CodeWithTabs>
 
 ## Custom refresh token flow
 
@@ -639,11 +610,9 @@ security:
 
 Add a file called `oauth` with the appropriate file extension for the programming language (for example, `oauth.ts` for TypeScript, `oauth.py` for Python, `oauth.go` for Go, and so on) to implement OAuth token exchange logic.
 
-<Tabs items={['TypeScript', 'Typescript-Axios (v1)', 'Python', 'Go', 'Java', 'C#']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import * as z from "zod";
 import { SDK_METADATA } from "./lib/config";
 
@@ -750,11 +719,7 @@ export class InMemoryTokenStore implements TokenStore {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript-Axios (v1)
 import axios from "axios";
 
 // eslint-disable-next-line @typescript-eslint/no-unused-vars
@@ -776,11 +741,7 @@ export function withAuthorization(clientID: string, clientSecret: string) {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 import requests
 from sdk.components import Security
 
@@ -800,11 +761,7 @@ def with_authorization(client_id: str, client_secret: str) -> Security:
       raise Exception(f'Failed to obtain OAuth token: {str(e)}')
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```go
+```go !!tabs Go
 package speakeasy
 
 import (
@@ -821,11 +778,7 @@ func withAuthorization(clientID string, clientSecret string) func(context.Contex
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```java
+```java !!tabs Java
 import dev.speakeasyapi.speakeasy.SecuritySource;
 import dev.speakeasyapi.speakeasy.models.components.Security;
 
@@ -851,11 +804,7 @@ class OAuth implements SecuritySource {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 namespace Speakeasy.Callbacks
 {
     using Speakeasy;
@@ -873,20 +822,15 @@ namespace Speakeasy.Callbacks
     }
 }
 ```
-
-</Tabs.Tab>
-
-</Tabs>
+</CodeWithTabs>
 
 ### Step 3: Pass the callback function in SDK instantiation
 
 Update the README to show how to pass the callback function when instantiating the SDK:
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { SDK } from "speakeasy";
 
 const sdk = new SDK({
@@ -896,22 +840,15 @@ const sdk = new SDK({
 await s.drinks.listDrinks();
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 import sdk
 
 s = sdk.SDK(security=with_authorization("<YOUR_CLIENT_ID>", "<YOUR_CLIENT_SECRET>"))
 res = s.drinks.list_drinks()
 ```
 
-</Tabs.Tab>
 
-<Tabs.Tab>
-
-```go
+```go !!tabs Go
 import (
 	"context"
   sdk "speakeasy"
@@ -927,11 +864,7 @@ ctx := context.Background()
 s.Drinks.ListDrinks(ctx)
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```java
+```java !!tabs Java
 import dev.speakeasyapi.speakeasy.OAuth;
 import dev.speakeasyapi.speakeasy.SDK;
 
@@ -944,11 +877,7 @@ SDK s = SDK.builder()
 ListDrinksResponse res = s.Drinks.listDrinks().call();
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 using Speakeasy;
 using Speakeasy.Callbacks;
 
@@ -957,9 +886,7 @@ var sdk = new SDK(securitySource: OAuth.withAuthorization)
 var res = await sdk.Drinks.ListDrinksAsync();
 ```
 
-</Tabs.Tab>
-
-</Tabs>
+</CodeWithTabs>
 
 ## OAuth 2.0 scopes
 
@@ -1010,7 +937,7 @@ paths:
 
 In this case, the SDK requests a token with the `read` scope only when calling the `listDrinks` operation. If the token does not meet the required scope for the operation or has expired, the SDK regenerates the token with the correct scope.
 
-Here’s how the SDK can be used with per-operation security:
+Here's how the SDK can be used with per-operation security:
 
 ```ts
 import { SDK } from "speakeasy";
