--- a/docs/customize/authentication/security-callbacks.mdx
+++ b/docs/customize/authentication/security-callbacks.mdx
@@ -45,11 +45,9 @@ components:
 
 The callback function passed when initializing the SDK acts as a _security source_ and is called whenever a request is made, allowing tokens to be refreshed if needed.
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { SDK } from "<packageName>";
 import { Security } from "<packageName>/models";
 
@@ -62,11 +60,7 @@ const sdk = new SDK({
 });
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 import requests
 import sdk
 from sdk.components import Security
@@ -79,11 +73,7 @@ def callback() -> Security:
 s = sdk.SDK(security=with_authorization(callback))
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```go
+```go !!tabs Go
 import (
 	"context"
   sdk "speakeasy"
@@ -99,11 +89,7 @@ s := sdk.New(
 )
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```java
+```java !!tabs Java
 import dev.speakeasyapi.speakeasy.SDK;
 import dev.speakeasyapi.speakeasy.SecuritySource;
 import dev.speakeasyapi.speakeasy.models.components.Security;
@@ -120,7 +106,7 @@ class BearerSource implements SecuritySource {
 }
 ```
 
-```java
+```java !!tabs Java
 import dev.speakeasyapi.speakeasy.SDK;
 import dev.speakeasyapi.speakeasy.SecuritySource;
 import dev.speakeasyapi.speakeasy.models.components.Security;
@@ -130,11 +116,7 @@ SDK s = SDK.builder()
     .build();
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 using Speakeasy;
 using Speakeasy.Models.Components;
 
@@ -150,9 +132,7 @@ Func<Security> tokenSource = () =>
 var sdk = new SDK(securitySource: tokenSource);
 ```
 
-</Tabs.Tab>
-<Tabs.Tab>
-```php
+```php !!tabs PHP
 use Speakeasy\Speakeasy;
 
 $sdk = Speakeasy\SDK::builder()
@@ -175,5 +155,4 @@ try {
     // handle exception
 }
 ```
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
