--- a/docs/customize/authentication/simple-schemes.mdx
+++ b/docs/customize/authentication/simple-schemes.mdx
@@ -33,11 +33,9 @@ security:
   - auth: []
 ```
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { SDK } from "speakeasy";
 
 async function run() {
@@ -57,11 +55,7 @@ async function run() {
 run();
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 import speakeasy
 from speakeasy.models import components
 
@@ -79,11 +73,7 @@ if res.drinks is not None:
     pass
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```go
+```go !!tabs Go
 package main
 
 import (
@@ -112,11 +102,7 @@ func main() {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```java
+```java !!tabs Java
 package hello.world;
 
 import dev.speakeasyapi.speakeasy.SDK;
@@ -157,11 +143,7 @@ public class Application {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 using Speakeasy;
 using Speakeasy.Models.Components;
 
@@ -188,11 +170,7 @@ catch (Exception ex)
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```php
+```php !!tabs PHP
 use OpenAPI\OpenAPI;
 use OpenAPI\OpenAPI\Models\Shared;
 
@@ -214,8 +192,7 @@ try {
 }
 ```
 
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ## API key authentication
 
@@ -247,11 +224,9 @@ security:
   - api_key: []
 ```
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { SDK } from "speakeasy";
 
 async function run() {
@@ -268,11 +243,7 @@ async function run() {
 run();
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 import speakeasy
 
 s = speakeasy.SDK(
@@ -286,11 +257,7 @@ if res.drinks is not None:
     pass
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```go
+```go !!tabs Go
 package main
 
 import (
@@ -317,11 +284,7 @@ func main() {
 
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```java
+```java !!tabs Java
 package hello.world;
 
 import dev.speakeasyapi.speakeasy.SDK;
@@ -359,11 +322,7 @@ public class Application {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 using Speakeasy;
 using Speakeasy.Models.Components;
 
@@ -386,10 +345,7 @@ catch (Exception ex)
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-```php
+```php !!tabs PHP
 use OpenAPI\OpenAPI;
 use OpenAPI\OpenAPI\Models\Shared;
 
@@ -409,8 +365,7 @@ try {
    // handle exception
 }
 ```
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ## Bearer token authentication
 
@@ -437,11 +392,9 @@ security:
   - auth: []
 ```
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { SDK } from "speakeasy";
 
 async function run() {
@@ -458,11 +411,7 @@ async function run() {
 run();
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 import speakeasy
 
 s = speakeasy.SDK(
@@ -476,11 +425,7 @@ if res.drinks is not None:
     pass
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```go
+```go !!tabs Go
 package main
 
 import (
@@ -506,11 +451,7 @@ func main() {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```java
+```java !!tabs Java
 package hello.world;
 
 import dev.speakeasyapi.speakeasy.SDK;
@@ -548,11 +489,7 @@ public class Application {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 using Speakeasy;
 using Speakeasy.Models.Components;
 
@@ -575,9 +512,7 @@ catch (Exception ex)
 }
 ```
 
-</Tabs.Tab>
-<Tabs.Tab>
-```php
+```php !!tabs PHP
 use OpenAPI\OpenAPI;
 use OpenAPI\OpenAPI\Models\Components;
 
@@ -597,5 +532,4 @@ try {
     // handle exception
 }
 ```
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
