--- a/docs/customize/code/sdk-hooks.mdx
+++ b/docs/customize/code/sdk-hooks.mdx
@@ -38,20 +38,26 @@ Hooks are supported in SDKs generated with the latest Speakeasy CLI. Each suppor
 
 1. **Create a hook implementation.**
 
-Add the custom hook implementation in a new file inside the `hooks` directory. The generator won’t override files added to this directory.
+Add the custom hook implementation in a new file inside the `hooks` directory. The generator won't override files added to this directory.
 
 2. **Locate the registration file.**
 
 Find the appropriate registration file for the language:
 
-| Language    | Registration File Path                             |
-| ----------- | -------------------------------------------------- |
-| Go          | `internal/hooks/registration.go`                   |
-| Python      | `src/{sdk_name}/_hooks/registration.py`            |
-| TypeScript  | `src/hooks/registration.ts`                        |
-| Java        | `src/main/java/{package_path}/hooks/SDKHooks.java` |
-| C#          | `{root_path}/Hooks/HookRegistration.cs`            |
-| Ruby        | `lib/{sdk_name}/sdk_hooks/registration.rb`         |
+<Table
+  columns={[
+    { key: "language", header: "Language" },
+    { key: "path", header: "Registration File Path" }
+  ]}
+  data={[
+    { language: "Go", path: "`internal/hooks/registration.go`" },
+    { language: "Python", path: "`src/{sdk_name}/_hooks/registration.py`" },
+    { language: "TypeScript", path: "`src/hooks/registration.ts`" },
+    { language: "Java", path: "`src/main/java/{package_path}/hooks/SDKHooks.java`" },
+    { language: "C#", path: "`{root_path}/Hooks/HookRegistration.cs`" },
+    { language: "Ruby", path: "`lib/{sdk_name}/sdk_hooks/registration.rb`" }
+  ]}
+/>
 
 3. **Instantiate and register your hook.**
 
@@ -59,10 +65,9 @@ In the registration file, find the method `initHooks/init_hooks/initialize/InitH
 
 Instantiate the hook here and register it for the appropriate event.
 
-<Tabs items={['Go', 'Python', 'TypeScript', 'Java', 'C#', 'PHP', 'Ruby']}>
-  <Tabs.Tab>
+<CodeWithTabs>
 
-```go
+```go !!tabs Go
 package hooks
 
 func initHooks(h *Hooks) {
@@ -71,10 +76,7 @@ func initHooks(h *Hooks) {
 }
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```python
+```python !!tabs Python
 from .customhooks import ExampleHook
 from .types import Hooks
 
@@ -83,10 +85,7 @@ def init_hooks(hooks: Hooks):
     hooks.register_before_request_hook(ExampleHook())
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { Hooks } from "./types";
 
 export function initHooks(hooks: Hooks) {
@@ -95,10 +94,7 @@ export function initHooks(hooks: Hooks) {
 }
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```java
+```java !!tabs Java
 package com.package.hooks;
 
 public final class SDKHooks {
@@ -111,10 +107,7 @@ public final class SDKHooks {
 }
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 namespace <namespace>
 {
     public static class HookRegistration
@@ -128,9 +121,7 @@ namespace <namespace>
 }
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-```php
+```php !!tabs PHP
 <?php
 
 declare(strict_types=1);
@@ -150,18 +141,15 @@ class HookRegistration
     }
 }
 ```
-  </Tabs.Tab>
-  <Tabs.Tab>
 
-```ruby
+```ruby !!tabs Ruby
 def self.init_hooks(hooks)
   example_hook = ExampleHook.new
   hooks.register_before_request_hook example_hook
 end
 ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 <Callout title="Note" type="info">
 The registration file is generated once and will not be overwritten. After the initial generation, you have full control and ownership of it.
@@ -169,10 +157,9 @@ The registration file is generated once and will not be overwritten. After the i
 
 Here are example hook implementations for each of the lifecycle events across different languages:
 
-<Tabs items={['Go', 'Python', 'TypeScript', 'Java', 'C#', 'PHP', 'Ruby']}>
-  <Tabs.Tab>
+<CodeWithTabs>
 
-```go
+```go !!tabs Go
 package hooks
 
 import (
@@ -209,10 +196,7 @@ func (i *ExampleHook) AfterError(hookCtx AfterErrorContext, res *http.Response, 
 }
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```python
+```python !!tabs Python
 from typing import Optional, Tuple, Union
 
 import httpx
@@ -266,10 +250,7 @@ class ExampleHook(SDKInitHook, BeforeRequestHook, AfterSuccessHook, AfterErrorHo
         return response, error
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { HTTPClient } from "../lib/http";
 import {
   AfterErrorContext,
@@ -313,10 +294,7 @@ export class ExampleHook
 }
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```java
+```java !!tabs Java
 package dev.speakeasyapi.speakeasy.hooks;
 
 import dev.speakeasyapi.speakeasy.utils.Utils;
@@ -374,10 +352,7 @@ final class ExampleHook implements BeforeRequest, AfterError, AfterSuccess, SdkI
 }
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 namespace Speakeasy.Hooks
 {
     using Speakeasy.Utils;
@@ -421,10 +396,8 @@ namespace Speakeasy.Hooks
 }
 ```
 
-  </Tabs.Tab>
 
-  <Tabs.Tab>
-```php
+```php !!tabs PHP
 namespace Speakeasy\Hooks;
 
 class ExampleHook implements AfterErrorHook, AfterSuccessHook, BeforeRequestHook, SDKInitHook
@@ -464,10 +437,8 @@ class ExampleHook implements AfterErrorHook, AfterSuccessHook, BeforeRequestHook
 }
 
 ```
-  </Tabs.Tab>
-  <Tabs.Tab>
 
-```ruby
+```ruby !!tabs Ruby
 # typed: true
 # frozen_string_literal: true
 
@@ -540,18 +511,14 @@ module ExampleSDK
 end
 ```
 
-  </Tabs.Tab>
-
-</Tabs>
+</CodeWithTabs>
 
 ## Adding Dependencies
 
 To add dependencies needed for SDK hooks, configure the `additionalDependencies` section in the `gen.yaml` file. <br/><br/>
 
-<Tabs items={['Go', 'Python', 'TypeScript', 'Java', 'C#', 'PHP', 'Ruby']}>
-  <Tabs.Tab>
-
-```yaml
+<CodeWithTabs>
+```yaml !!tabs Go
 configVersion: 2.0.0
 go:
 additionalDependencies:
@@ -559,10 +526,8 @@ additionalDependencies:
   "github.com/google/uuid": v1.6.0
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
  
-```yaml
+```yaml !!tabs Python
 configVersion: 2.0.0
 python:
   additionalDependencies:
@@ -574,10 +539,8 @@ python:
       - "pydantic>=1.8.0"
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
 
-```yaml
+```yaml !!tabs TypeScript
 typescript:
 additionalDependencies:
   #  Pass a map of npm package names to their version pattern for `dependencies`, `devDependencies`, or `peerDependencies`.
@@ -588,10 +551,8 @@ additionalDependencies:
   peerDependencies: {}
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
  
-```yaml
+```yaml !!tabs Java
 java:
 additionalDependencies:
   # Pass an array of `scope:groupId:artifactId:version` strings, for example, `implementation:com.fasterxml.jackson.core:jackson-databind:2.16.2`.
@@ -599,10 +560,8 @@ additionalDependencies:
   - api:org.apache.commons:commons-compress:1.26.1
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
 
-```yaml
+```yaml !!tabs C#
 csharp:
   additionalDependencies:
     - package: RestSharp
@@ -612,10 +571,8 @@ csharp:
       excludeAssets: none
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
 
-```yaml
+```yaml !!tabs PHP
 php:
   additionalDependencies:
     require:
@@ -624,10 +581,8 @@ php:
       "roave/security-advisories": "dev-latest"
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
  
-```yaml
+```yaml !!tabs Ruby
 configVersion: 2.0.0
 ruby:
   additionalDependencies:
@@ -637,5 +592,4 @@ ruby:
       "rubocop-faker": "1.3.0"
 ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
