--- a/docs/customize/deprecations.mdx
+++ b/docs/customize/deprecations.mdx
@@ -43,10 +43,9 @@ paths:
         - beverages
 ```
 
-<Tabs items={['TypeScript','Python','Go','Java', 'C#', 'PHP']}>
-  <Tabs.Tab>
+<CodeWithTabs>
 
-    ```typescript
+```typescript !!tabs TypeScript
     /**
      * Get a list of drinks.
      *
@@ -61,10 +60,7 @@ paths:
     ): Promise<operations.ListDrinksResponse> {}
     ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-    ```python
+    ```python !!tabs Python
     def list_drinks(self, request: operations.ListDrinksRequest) -> operations.ListDrinksResponse:
         r"""Get a list of drinks.
         Get a list of drinks, if authenticated this will include stock levels and product codes otherwise it will only include public information.
@@ -73,10 +69,7 @@ paths:
         """
     ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-    ```go
+    ```go !!tabs Go
     // ListDrinks - Get a list of drinks.
     // Get a list of drinks, if authenticated this will include stock levels and product codes otherwise it will only include public information.
     //
@@ -84,10 +77,7 @@ paths:
     func (s *Drinks) ListDrinks(ctx context.Context, request operations.ListDrinksRequest) (*operations.ListDrinksResponse, error) {}
     ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-    ```java
+    ```java !!tabs Java
     /**
      * Get a list of drinks.
      * Get a list of drinks, if authenticated this will include stock levels and product codes otherwise it will only include public information.
@@ -101,15 +91,12 @@ paths:
             org.openapis.openapi.models.operations.ListDrinksRequest request) throws Exception {}
     ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-    ```csharp
+    ```csharp !!tabs C#
     [Obsolete("This method will be removed in a future release, please migrate away from it as soon as possible. Use ListBeverages instead")]
     public async Task<ListDrinksResponse> ListDrinksAsync() {}
     ```
-  </Tabs.Tab>
-  <Tabs.Tab>
-    ```php
+
+    ```php !!tabs PHP
     /**
      * Get a list of drinks, if authenticated this will include stock levels and product codes otherwise it will only include public information.
      * @param request The request object containing all of the parameters for the API call.
@@ -119,8 +106,7 @@ paths:
      */
     public function listDrinks(Shared\ListDrinksRequest $request): ListDrinksResponse
     ```
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ## Deprecate Parameters
 
@@ -165,9 +151,9 @@ paths:
             example: 100
 ```
 
-<Tabs items={['TypeScript','Python','Go','Java', 'C#', 'PHP']}>
-  <Tabs.Tab>
-```typescript
+<CodeWithTabs>
+
+```typescript !!tabs TypeScript
 export type ListDrinksRequest = {
     /**
      * Filter by ingredient.
@@ -185,10 +171,8 @@ export type ListDrinksRequest = {
     limit?: number | undefined;
 };
 ```   
-  </Tabs.Tab>
-  <Tabs.Tab>
 
-    ```python
+```python !!tabs Python
 
 @dataclasses.dataclass
 class ListDrinksRequest:
@@ -203,9 +187,7 @@ r"""Filter by name.
     r"""Limit the number of results."""
     ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-    ```go
+```go !!tabs Go
 type ListDrinksRequest struct {
 	// Filter by ingredient.
 	Ingredient *string `queryParam:"style=form,explode=true,name=ingredient"`
@@ -217,9 +199,8 @@ type ListDrinksRequest struct {
 	Limit *int64 `queryParam:"style=form,explode=true,name=limit"`
 }
     ```
-  </Tabs.Tab>
-  <Tabs.Tab>
-    ```java
+
+```java !!tabs Java
 public class ListDrinksRequest {
 
     /**
@@ -245,9 +226,7 @@ public class ListDrinksRequest {
 }
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-    ```csharp
+```csharp !!tabs C#
 public class ListDrinksRequest
 {
 
@@ -273,9 +252,7 @@ public class ListDrinksRequest
 }
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-    ```php
+```php !!tabs PHP
 class ListDrinksRequest
 {
 
@@ -304,8 +281,7 @@ class ListDrinksRequest
 }
 ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ## Deprecate Properties
 
@@ -335,9 +311,9 @@ components:
         - productCode
 ```
 
-<Tabs items={['TypeScript','Python','Go','Java', 'C#', 'PHP']}>
-  <Tabs.Tab>
-    ```typescript
+<CodeWithTabs>
+
+```typescript !!tabs TypeScript
     export type Drink = {
         name: string;
         stock: number;
@@ -348,10 +324,8 @@ components:
         sku?: string | undefined;
     };
     ```
-  </Tabs.Tab>
-  <Tabs.Tab>
 
-    ```python
+    ```python !!tabs Python
     @dataclass_json(undefined=Undefined.EXCLUDE)
     @dataclasses.dataclass
     class Drink:
@@ -362,9 +336,7 @@ components:
         r"""Deprecated field: We no longer support the SKU property."""
     ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-    ```go
+    ```go !!tabs Go
     type Drink struct {
         Name        string `json:"name"`
         Stock       int64  `json:"stock"`
@@ -373,9 +345,8 @@ components:
         Sku *string `json:"sku,omitempty"`
     }
     ```
-  </Tabs.Tab>
-  <Tabs.Tab>
-    ```java
+
+    ```java !!tabs Java
     public class Drink {
 
         @JsonProperty("name")
@@ -397,9 +368,7 @@ components:
     }
     ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-```csharp
+    ```csharp !!tabs C#
     public class Drink
     {
         [SpeakeasyMetadata("queryParam:name=name")]
@@ -417,9 +386,8 @@ components:
     }
 
 ```
-  </Tabs.Tab>
-  <Tabs.Tab>
-```php
+
+```php !!tabs PHP
 class Drink
 {
     /**
@@ -448,6 +416,5 @@ class Drink
     public float stock;
 }
 ```
-    </Tabs.Tab>
-</Tabs>
-```
+
+</CodeWithTabs>
