--- a/docs/customize/globals.mdx
+++ b/docs/customize/globals.mdx
@@ -79,11 +79,9 @@ Global parameters can be used with `in: query`, `in: path`, or `in: header` fiel
 
 The global parameter definitions in the sample above will generate the following output:
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 import { Speakeasybar } from "speakeasy";
 
 async function run() {
@@ -100,11 +98,7 @@ async function run() {
 run();
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 import speakeasy
 from speakeasy.models import operations
 
@@ -121,11 +115,7 @@ if res is not None:
     pass
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```go
+```go !!tabs Go
 package main
 
 import (
@@ -151,11 +141,7 @@ func main() {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```java
+```java !!tabs Java
 package hello.world;
 
 import java.math.BigDecimal;
@@ -195,11 +181,7 @@ public class Application {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 using Openapi;
 using Openapi.Models.Components;
 using Openapi.Models.Operations;
@@ -215,11 +197,7 @@ try {
 }
 ```
 
-</Tabs.Tab>
-
-<Tabs.Tab>
-
-```php
+```php !!tabs PHP
 <?php
 
 declare(strict_types=1);
@@ -240,9 +218,7 @@ try {
 }
 ```
 
-</Tabs.Tab>
-
-</Tabs>
+</CodeWithTabs>
 
 ## Hiding global parameters from method signatures
 
