--- a/docs/customize/methods.mdx
+++ b/docs/customize/methods.mdx
@@ -93,9 +93,9 @@ To ensure the generator always creates a request object for an SDK, set `maxMeth
 
 Here are examples of an SDK with `maxMethodParams` set to `4` and `0`:
 
-<Tabs items={['TypeScript','Python','Go', 'Java', 'C#', 'PHP']}>
-  <Tabs.Tab>
-```typescript
+<CodeWithTabs>
+
+```typescript !!tabs TypeScript
 // Example of SDK with maxMethodParams set to 4
 import { Speakeasybar } from "speakeasy";
 
@@ -133,11 +133,9 @@ const sdk = new Speakeasybar();
 }
 
 run();
+```
 
-````
-  </Tabs.Tab>
-  <Tabs.Tab>
-```python
+```python !!tabs Python
 # Example of SDK with maxMethodParams set to 4
 import sdk
 
@@ -167,11 +165,9 @@ res = s.drinks.list_drinks(req)
 if res.drinks is not None:
     # handle response
     pass
-````
+```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-```go
+```go !!tabs Go
 // Example of SDK with maxMethodParams set to 4
 package main
 
@@ -228,11 +224,9 @@ s := speakeasy.New()
     }
 
 }
+```
 
-````
-  </Tabs.Tab>
-  <Tabs.Tab>
-```java
+```java !!tabs Java
 // Example of SDK with maxMethodParams set to 4
 package hello.world;
 
@@ -314,11 +308,9 @@ public class Application {
         }
     }
 }
-````
+```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-```csharp
+```csharp !!tabs C#
 // Example of SDK with maxMethodParams set to 4
 using Openapi;
 using Openapi.Models.Operations;
@@ -349,11 +341,9 @@ Limit = 100
 var res = await sdk.Drinks.ListDrinksAsync(req);
 
 // handle response
+```
 
-````
-  </Tabs.Tab>
-  <Tabs.Tab>
-```php
+```php !!tabs PHP
 // Example of SDK with maxMethodParams set to 4
 declare(strict_types=1);
 
@@ -383,8 +373,7 @@ $response = $sdk->drinks->listDrinks($request);
 // handle response
 
 ```
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 You can also set `maxMethodParams` using the `x-speakeasy-max-method-params` extension in your OpenAPI document, either globally at the root of the document or at the operation level.
 
