--- a/docs/customize/responses/responses.mdx
+++ b/docs/customize/responses/responses.mdx
@@ -81,50 +81,32 @@ The flat response format is the simplest and most ergonomic option, as it avoids
 
 When `responseFormat: flat` is enabled, the generated SDK code will return the `Payment` type directly with no indirection:
 
-<Tabs items={['TypeScript','Python','Go', 'C#', 'PHP']}>
-  <Tabs.Tab>
 
-    ```typescript
+<CodeWithTabs>
+    ```typescript !!tabs TypeScript
     export class SDK extends ClientSDK {
       async getPayment(id: string, options?: RequestOptions): Promise<components.Payment> {}
     }
     ```
 
-  </Tabs.Tab>
-
-  <Tabs.Tab>
-
-    ```python
+```python !!tabs Python
     class SDK:
         def get_payment(self, id: str) -> components.Payment:
     ```
 
-  </Tabs.Tab>
-
-  <Tabs.Tab>
-
-    ```go
+```go !!tabs Go
     func (s *SDK) GetPayment(ctx context.Context, id string) (*components.Payment, error) {}
     ```
 
-  </Tabs.Tab>
-
-  <Tabs.Tab>
-
-    ```csharp
+```csharp !!tabs C#
     public async Task<Payment> GetPaymentAsync(string id){}
     ```
 
-  </Tabs.Tab>
-
-  <Tabs.Tab>
-
-    ```php
+```php !!tabs PHP
     public function getPayment(string $id, ?Options $options = null): Payment
     ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 To debug HTTP metadata, users can pass a [custom client](/docs/customize-sdks/custom-http-client) to the SDK instance.
 
@@ -135,16 +117,14 @@ The `envelope-http` format builds response types with a wrapper that holds the r
 
 When `envelope-http` is enabled, the generated SDK code will produce the response types below:
 
-<Tabs items={['TypeScript','Python','Go', 'C#', 'PHP']}>
-  <Tabs.Tab>
-
-    ```typescript
+<CodeWithTabs>
+    ```typescript !!tabs TypeScript
     class SDK extends ClientSDK {
         async getPayment(id: string, options?: RequestOptions): Promise<operations.GetPaymentResponse> {}
     }
-    ```
 
-    ```typescript
+    /*--------------------------------*/
+
     export type GetPaymentResponse = {
         httpMeta: components.HTTPMetadata;
 
@@ -153,9 +133,9 @@ When `envelope-http` is enabled, the generated SDK code will produce the respons
          */
         payment?: components.Payment | undefined;
     };
-    ```
 
-    ```typescript
+    /*--------------------------------*/
+
     export type HTTPMetadata = {
       /**
        * Raw HTTP response; suitable for custom response parsing
@@ -168,25 +148,21 @@ When `envelope-http` is enabled, the generated SDK code will produce the respons
     };
     ```
 
-  </Tabs.Tab>
-
-  <Tabs.Tab>
-
-    ```python
+    ```python !!tabs Python
     class SDK:
         def get_payment(self, id: str) -> operations.GetPaymentResponse:
-    ```
+    
+    ####################################
 
-    ```python
     @dataclasses.dataclass
     class GetPaymentResponse:
         http_meta: components_httpmetadata.HTTPMetadata = dataclasses.field()
 
         payment: Optional[components_payment.Payment] = dataclasses.field(default=None)
         r"""Details about a payment"""
-    ```
 
-    ```python
+    ####################################
+
     @dataclass_json(undefined=Undefined.EXCLUDE)
     @dataclasses.dataclass
     class HTTPMetadata:
@@ -196,24 +172,21 @@ When `envelope-http` is enabled, the generated SDK code will produce the respons
         r"""Raw HTTP request; suitable for debugging"""
     ```
 
-  </Tabs.Tab>
 
-  <Tabs.Tab>
-
-    ```go
+    ```go !!tabs Go
     func (s *SDK) GetPayment(ctx context.Context, id string) (*operations.GetPaymentResponse, error) {}
-    ```
-
-    ```go
+   
+    /*--------------------------------*/
+   
     type GetPaymentResponse struct {
       HTTPMeta components.HTTPMetadata
 
       // Details about a payment
       Payment *components.Payment
     }
-    ```
 
-    ```go
+    /*--------------------------------*/
+
     type HTTPMetadata struct {
       // Raw HTTP response; suitable for custom response parsing
       Response *http.Response `json:"-"`
@@ -222,24 +195,20 @@ When `envelope-http` is enabled, the generated SDK code will produce the respons
     }
     ```
 
-  </Tabs.Tab>
-
-  <Tabs.Tab>
-
-    ```csharp
+    ```csharp !!tabs C#
     Task<GetPaymentResponse> GetPaymentAsync(string id);
-    ```
 
-    ```csharp
+    /*--------------------------------*/
+
     public class GetPaymentResponse
     {
         public HTTPMetadata HttpMeta { get; set; } = default!;
         // Details about a payment
         public Payment? Payment { get; set; } = default!;
     }
-    ```
 
-    ```csharp
+    /*--------------------------------*/
+
     public class HTTPMetadata
     {
 
@@ -257,18 +226,14 @@ When `envelope-http` is enabled, the generated SDK code will produce the respons
     }
     ```
 
-  </Tabs.Tab>
-
-  <Tabs.Tab>
-
-    ```php
+    ```php !!tabs PHP
     class SDK
     {
         public function getPayment(string $id, ?Options $options = null): GetPaymentResponse
     }
-    ```
 
-    ```php
+    /*--------------------------------*/
+
     class GetPaymentResponse
     {
         /**
@@ -287,9 +252,9 @@ When `envelope-http` is enabled, the generated SDK code will produce the respons
         public Payment? Payment { get; set; } = default!;
 
     }
-    ```
 
-    ```php
+    /*--------------------------------*/
+
     class HTTPMetadata
     {
         /**
@@ -312,9 +277,7 @@ When `envelope-http` is enabled, the generated SDK code will produce the respons
 
     }
     ```
-
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 Built-in HTTP metadata is included in both custom and built-in error types that are thrown or returned from the SDK.
 
@@ -352,16 +315,15 @@ The `responseFormat: envelope` format builds response types with a wrapper that 
 
 When `responseFormat: envelope` is enabled, the generated SDK code will produce the response types below:
 
-<Tabs items={['TypeScript','Python','Go', 'C#', 'PHP']}>
-  <Tabs.Tab>
+  <CodeWithTabs>
 
-    ```typescript
+    ```typescript !!tabs TypeScript
     class SDK extends ClientSDK {
         async getPayment(id: string, options?: RequestOptions): Promise<operations.GetPaymentResponse> {}
     }
-    ```
 
-    ```typescript
+    /*--------------------------------*/
+    
     export type GetPaymentResponse = {
       /**
        * HTTP response content type for this operation
@@ -382,25 +344,21 @@ When `responseFormat: envelope` is enabled, the generated SDK code will produce 
     };
     ```
 
-  </Tabs.Tab>
-
-  <Tabs.Tab>
-
-    ```python
+    ```python !!tabs Python
     class SDK:
         def get_payment(self, id: str) -> operations.GetPaymentResponse:
-    ```
+   
+    ####################################
 
-    ```python
     @dataclasses.dataclass
     class GetPaymentResponse:
         http_meta: components_httpmetadata.HTTPMetadata = dataclasses.field()
 
         payment: Optional[components_payment.Payment] = dataclasses.field(default=None)
         r"""Details about a payment"""
-    ```
+    
+    ####################################
 
-    ```python
     @dataclasses.dataclass
     class GetPaymentResponse:
         content_type: str = dataclasses.field()
@@ -413,15 +371,11 @@ When `responseFormat: envelope` is enabled, the generated SDK code will produce 
         r"""Details about a payment"""
     ```
 
-  </Tabs.Tab>
-
-  <Tabs.Tab>
-
-    ```go
+    ```go !!tabs Go
     func (s *SDK) GetPayment(ctx context.Context, id string) (*operations.GetPaymentResponse, error) {}
-    ```
+   
+    /*--------------------------------*/
 
-    ```go
     type GetPaymentResponse struct {
       // HTTP response content type for this operation
       ContentType string
@@ -434,15 +388,11 @@ When `responseFormat: envelope` is enabled, the generated SDK code will produce 
     }
     ```
 
-  </Tabs.Tab>
-
-  <Tabs.Tab>
-
-    ```csharp
+    ```csharp !!tabs C#
     Task<GetPaymentResponse> GetPaymentAsync(string id);
-    ```
 
-    ```csharp
+    /*--------------------------------*/
+
     public class GetPaymentResponse
     {
 
@@ -468,18 +418,14 @@ When `responseFormat: envelope` is enabled, the generated SDK code will produce 
     }
     ```
 
-  </Tabs.Tab>
-
-  <Tabs.Tab>
-
-    ```php
+    ```php !!tabs PHP
     class SDK
     {
         public function getPayment(string $id, ?Options $options = null): GetPaymentResponse
     }   
-     ```
+    
+    /*--------------------------------*/
 
-    ```php
     class GetPaymentResponse
     {
         /**
@@ -513,5 +459,4 @@ When `responseFormat: envelope` is enabled, the generated SDK code will produce 
     }
     ```
 
-    </Tabs.Tab>
-  </Tabs>
+  </CodeWithTabs>
