--- a/docs/customize/runtime/override-accept-headers.mdx
+++ b/docs/customize/runtime/override-accept-headers.mdx
@@ -59,10 +59,8 @@ res, err := s.Users.GetAll(ctx, operations.WithAcceptHeaderOverride(operations.A
 
 In Python and TypeScript, each operation with multiple specified accept headers will have an enum created that provides the acceptable options. The name of the enum will be the tag name, followed by the operation name, followed by `AcceptEnum`. For the example above, that would be `UsersGetAllAcceptEnum`.
 
-<Tabs items={['Typescript', 'Python']}>
-  <Tabs.Tab>
-
-    ```typescript
+<CodeWithTabs>
+    ```typescript !!tabs TypeScript
     import { UsersGetAllAcceptEnum } from "../src/sdk/users";
 
     const s = new SDK({});
@@ -70,10 +68,7 @@ In Python and TypeScript, each operation with multiple specified accept headers 
     const res = await s.users.getAll(undefined, undefined, UsersGetAllAcceptEnum.applicationJSON);
     ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-    ```python
+    ```python !!tabs Python
     from sdk.users import ResponseBodyOptionalGetAcceptEnum
 
     s = SDK()
@@ -83,8 +78,7 @@ In Python and TypeScript, each operation with multiple specified accept headers 
     )
     ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ## Unspecified Accept Headers
 
