--- a/docs/customize/runtime/retries.mdx
+++ b/docs/customize/runtime/retries.mdx
@@ -126,17 +126,13 @@ To override the retry strategy globally, initialize the SDK object with the appr
 
 In this example, we use the `RetryConfig` object to disable retries globally:
 
-<Tabs items={['TS', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
-  <Tabs.Tab>
 
-```typescript
+<CodeWithTabs>
+```typescript !!tabs TypeScript
 const sdk = new SDK({retryConfig: {strategy: "none"}});
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```python
+```python !!tabs Python
 s = SDK(retry_config=RetryConfig(
   strategy='none',
   backoff=None,
@@ -144,51 +140,37 @@ s = SDK(retry_config=RetryConfig(
 ))
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```go
+```go !!tabs Go
 s := sdk.New(sdk.WithRetryConfig(utils.RetryConfig{Strategy: "none"}))
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```java
+```java !!tabs Java
 SDK s = SDK.builder()
     .retryConfig(RetryConfig.noRetries())
     .build();
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 var sdk = new SDK(
     retryConfig: new RetryConfig(
         strategy: RetryConfig.RetryStrategy.NONE
 ));
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```php
+```php !!tabs PHP
 $sdk = SDK::builder()
     ->setRetryConfig(new Retry\RetryConfigNone())->build();
 ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ### Request-Level Override
 
 Any endpoints that support retries allow retry configuration to be overridden. In Go, override request-level retry configuration with `operations.WithRetries`. In Python and TypeScript, the optional `retries` is accepted.
 
-<Tabs items={['TS', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
-<Tabs.Tab>
+<CodeWithTabs>
 
-```typescript
+```typescript !!tabs TypeScript
 const sdk = new SDK({});
 await sdk.findPetsByStatus(request, {
   strategy: "backoff",
@@ -202,10 +184,7 @@ await sdk.findPetsByStatus(request, {
 });
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```python
+```python !!tabs Python
 s = sdk()
 res = s.find_pets_by_status(request, RetryConfig(strategy='backoff',
   backoff=BackoffStrategy(
@@ -217,10 +196,7 @@ res = s.find_pets_by_status(request, RetryConfig(strategy='backoff',
 ))
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```go
+```go !!tabs Go
 s := sdk.New()
 s.FindPetsByStatus(&operations.FindPetsByStatusRequest{},
   operations.WithRetries(utils.RetryConfig{
@@ -236,10 +212,7 @@ s.FindPetsByStatus(&operations.FindPetsByStatusRequest{},
 )
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```java
+```java !!tabs Java
 import <namepace>.SDK;
 import <namepace>.models.operations.FindPetsByStatusResponse
 
@@ -257,10 +230,7 @@ FindPetsByStatusResponse res = sdk.findPetsByStatus()
     .call();
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 var sdk = new SDK();
 
 var res = await sdk.FindPetsByStatusAsync(retryConfig: new RetryConfig(
@@ -276,10 +246,7 @@ var res = await sdk.FindPetsByStatusAsync(retryConfig: new RetryConfig(
 
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```php
+```php !!tabs PHP
 $sdk = SDK::builder()->build();
 
 $responses = $sdk->findPetsByStatus(
@@ -294,8 +261,7 @@ $responses = $sdk->findPetsByStatus(
 
 ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ## Idempotency
 
