--- a/docs/customize/runtime/streaming.mdx
+++ b/docs/customize/runtime/streaming.mdx
@@ -33,13 +33,12 @@ In an OpenAPI document, this can be modeled as a binary stream. Here's an exampl
               format: binary
 ```
 
-<Tabs items={['TypeScript', 'Go']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
 
-For response streaming in TypeScript SDKs, expose a `ReadableStream`, which is part of the [Streams API web standard](https://developer.mozilla.org/en-US/docs/Web/API/Streams_API/Using_readable_streams).
+```typescript !!tabs TypeScript
+// For response streaming in TypeScript SDKs, expose a `ReadableStream`, which is part of the [Streams API web standard](https://developer.mozilla.org/en-US/docs/Web/API/Streams_API/Using_readable_streams).
 
-```typescript
 import fs from "node:fs";
 import { Writable } from "node:stream";
 import { SDK } from "@speakeasy/super-sdk";
@@ -59,13 +58,10 @@ async function run() {
 run();
 ```
 
-</Tabs.Tab>
+```go !!tabs Go
+// Use any [`io.Reader`](https://pkg.go.dev/io#Reader) implementation to read the data, such as calling [`io.Copy()`](https://pkg.go.dev/io#Copy) to a file.
 
-<Tabs.Tab>
 
-Use any [`io.Reader`](https://pkg.go.dev/io#Reader) implementation to read the data, such as calling [`io.Copy()`](https://pkg.go.dev/io#Copy) to a file.
-
-```go
 ctx := context.Background()
 s := sdk.New()
 
@@ -86,9 +82,7 @@ defer response.Data.Close()
 _, err = io.Copy(file, response.Data)
 ```
 
-</Tabs.Tab>
-
-</Tabs>
+</CodeWithTabs>
 
 ## Streaming uploads
 
@@ -123,14 +117,12 @@ In this example, a request to upload a file is managed as a `multipart/form-data
               $ref: "#/components/schemas/File"
 ```
 
-<Tabs items={['TypeScript', 'Go']}>
+<CodeWithTabs>
 
-<Tabs.Tab>
+```typescript !!tabs TypeScript
+// As an example, in Node.js v20, streaming a large file to a server using an SDK is only a handful of lines. On the browser,
+// users typically select files using `<input type="file">`, and the SDK call looks like the sample code below.
 
-As an example, in Node.js v20, streaming a large file to a server using an SDK is only a handful of lines. On the browser,
-users typically select files using `<input type="file">`, and the SDK call looks like the sample code below.
-
-```typescript
 import { openAsBlob } from "node:fs";
 
 import { SDK } from "@speakeasy/super-sdk";
@@ -145,22 +137,20 @@ async function run() {
   console.log(result);
 }
 run();
+
+// Depending on your JavaScript runtime, convenient utilities can return a handle to a file without reading the entire contents into memory:
+
+// - **Node.js v20+:** Since version 20, Node.js comes with a native `openAsBlob` function in [`node:fs`](https://nodejs.org/docs/latest-v20.x/api/fs.html#fsopenasblobpath-options).
+// - **Bun:** The native [`Bun.file`](https://bun.sh/docs/api/file-io#reading-files-bun-file) function produces a file handle that can be used for streaming file uploads.
+// - **Browsers:** All supported browsers return an instance to a [`File`](https://developer.mozilla.org/en-US/docs/Web/API/File) when reading the value from an `<input type="file">` element.
+// - **Node.js v18:** A file stream can be created using the `fileFrom` helper from [`fetch-blob/from.js`](https://www.npmjs.com/package/fetch-blob).
 ```
 
-Depending on your JavaScript runtime, convenient utilities can return a handle to a file without reading the entire contents into memory:
 
-- **Node.js v20+:** Since version 20, Node.js comes with a native `openAsBlob` function in [`node:fs`](https://nodejs.org/docs/latest-v20.x/api/fs.html#fsopenasblobpath-options).
-- **Bun:** The native [`Bun.file`](https://bun.sh/docs/api/file-io#reading-files-bun-file) function produces a file handle that can be used for streaming file uploads.
-- **Browsers:** All supported browsers return an instance to a [`File`](https://developer.mozilla.org/en-US/docs/Web/API/File) when reading the value from an `<input type="file">` element.
-- **Node.js v18:** A file stream can be created using the `fileFrom` helper from [`fetch-blob/from.js`](https://www.npmjs.com/package/fetch-blob).
+```go !!tabs Go
+// Use any [`io.Reader`](https://pkg.go.dev/io#Reader) implementation, such as calling [`os.Open()`](https://pkg.go.dev/os#Open) on an existing file.
 
-</Tabs.Tab>
 
-<Tabs.Tab>
-
-Use any [`io.Reader`](https://pkg.go.dev/io#Reader) implementation, such as calling [`os.Open()`](https://pkg.go.dev/os#Open) on an existing file.
-
-```go
 ctx := context.Background()
 s := sdk.New()
 
@@ -173,6 +163,4 @@ if err != nil {
 response, err := s.upload(ctx, file)
 ```
 
-</Tabs.Tab>
-
-</Tabs>
+</CodeWithTabs>
