--- a/docs/customize/runtime/timeouts.mdx
+++ b/docs/customize/runtime/timeouts.mdx
@@ -81,61 +81,45 @@ Users of the SDK can override the timeout configuration globally or at the reque
 
 To override the timeout configuration globally, initialize the SDK object with the appropriate options parameter. In all cases, if no override is provided, the timeout configuration provided in the OpenAPI document will be used.
 
-<Tabs items={['TypeScript', 'Python', 'Go']}>
-  <Tabs.Tab>
+<CodeWithTabs>
 
-```typescript
+```typescript !!tabs TypeScript
 const sdk = new SDK({timeoutMs: 100});
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```python
+```python !!tabs Python
 s = SDK(timeout_ms=100)
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```go
+```go !!tabs Go
 s := sdk.New(sdk.WithTimeout(100 * time.Millisecond))
 ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ### Overriding timeout configuration at the request level
 
 Users can override the timeout config on a per-operation basis.
 
-<Tabs items={['TypeScript', 'Python', 'Go']}>
-<Tabs.Tab>
+<CodeWithTabs>
 
-```typescript
+```typescript !!tabs TypeScript
 const sdk = new SDK({});
 await sdk.findPetsByStatus(request, {
   timeoutMs: 1000,
 });
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```python
+```python !!tabs Python
 s = sdk()
 res = s.find_pets_by_status(request, timeout_ms = 100)
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```go
+```go !!tabs Go
 s := sdk.New()
 s.FindPetsByStatus(&operations.FindPetsByStatusRequest{},
   operations.WithOperationTimeout(100 * time.Millisecond),
 )
 ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
