--- a/docs/customize/servers.mdx
+++ b/docs/customize/servers.mdx
@@ -93,58 +93,43 @@ Dynamic server selection allows developers to switch between multiple predefined
 
 Specify a server from the predefined list based on its index.
 
-<Tabs items={['Go', 'Python', 'TS', 'C#', 'PHP']}>
-  <Tabs.Tab>
+<CodeWithTabs>
 
-```go
+```go !!tabs Go
 s := sdk.New(
 		sdk.WithServerIndex(1)
 )
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```python
+```python !!tabs Python
 s = sdk.SDK(
     server_idx=1,
 )
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 const sdk = new SDK({
     serverIdx: 1,
 });
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 const sdk = new SDK(serverIndex: 1);
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```php
+```php !!tabs PHP
 $sdk = OpenAPI\SDK::builder()->withServerIndex(1)->build();
 ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 #### Global URL Override
 
 Set a global server URL at SDK initialization, overriding the base URL.
 
-<Tabs items={['Go', 'Python', 'TS', 'C#', 'PHP']}>
-  <Tabs.Tab>
+<CodeWithTabs>
 
-```go
+```go !!tabs Go
 s := sdk.New(
     // if the x-speakeasy-server-id extension is not used
 		sdk.WithServerURL("https://sandbox.example.com")
@@ -154,10 +139,7 @@ s := sdk.New(
 )
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```python
+```python !!tabs Python
 s = sdk.SDK(
   # if the x-speakeasy-server-id extension is not used
   server_url="https://sandbox.example.com"
@@ -168,10 +150,7 @@ s = sdk.SDK(
 )
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 const sdk = new SDK({
     // if the x-speakeasy-server-id extension is not used
     serverURL: "https://sandbox.example.com",
@@ -181,10 +160,7 @@ const sdk = new SDK({
 });
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 const sdk = new SDK(
     // if the x-speakeasy-server-id extension is not used
     serverURL: "https://sandbox.example.com",
@@ -194,10 +170,7 @@ const sdk = new SDK(
 );
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```php
+```php !!tabs PHP
 $sdk = OpenAPI\SDK::builder()->
     // if the x-speakeasy-server-id extension is not used
     withServerUrl("https://sandbox.example.com")
@@ -205,17 +178,15 @@ $sdk = OpenAPI\SDK::builder()->
     withServer("snadbox")->build();
 ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 #### Per-Client or Per-Operation Override
 
 Override the server URL for specific instances or API calls.
 
-<Tabs items={['Go', 'Python', 'TS', 'C#', 'PHP']}>
-  <Tabs.Tab>
+<CodeWithTabs>
 
-```go
+```go !!tabs Go
 res, err := s.Tag1.ListTest1(
     ctx,
     operationSecurity,
@@ -226,10 +197,7 @@ res, err := s.Tag1.ListTest1(
 )
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```python
+```python !!tabs Python
 res = s.tag1.list_test1(
     "<YOUR_API_KEY>",
     server_url="https://sandbox.example.com",
@@ -239,19 +207,13 @@ res = s.tag1.list_test1(
 )
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 const result = await sdk.tag1.listTest1(operationSecurity, page, headerParam1, queryParam1, {
     serverURL: "https://sandbox.example.com",
 });
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 var res = await sdk.Tag1.ListTest1Async(
     security: operationSecurity,
     page: page,
@@ -261,10 +223,7 @@ var res = await sdk.Tag1.ListTest1Async(
 );
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```php
+```php !!tabs PHP
 $response = $sdk.tag1.listTest1(
     security: operationSecurity,
     page: page,
@@ -274,8 +233,7 @@ $response = $sdk.tag1.listTest1(
 );
 ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 <Callout title="CAUTION" type="warning">
   If you choose to configure the SDK URL at runtime and relative paths were used
