--- a/docs/sdk-docs.mdx
+++ b/docs/sdk-docs.mdx
@@ -356,10 +356,9 @@ paths:
 
 The generated SDK will have a method commented like so:
 
-<Tabs items={['Go', 'Python', 'TS', 'Java', 'C#']}>
-<Tabs.Tab>
+<CodeWithTabs>
 
-```go
+```go !!tabs Go
 // ListPets - List all pets
 // Get a list of all pets in the system
 func (s *SDK) ListPets(ctx context.Context) (*operations.ListPetsResponse, error) {
@@ -367,10 +366,7 @@ func (s *SDK) ListPets(ctx context.Context) (*operations.ListPetsResponse, error
 }
 ```
 
-</Tabs.Tab>
-<Tabs.Tab>
-
-```python
+```python !!tabs Python
 def list_pets(self) -> operations.ListPetsResponse:
     r"""List all pets
     Get a list of all pets in the system
@@ -378,10 +374,7 @@ def list_pets(self) -> operations.ListPetsResponse:
     # ...
 ```
 
-</Tabs.Tab>
-<Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
   /**
    * ListPets - List all pets
    *
@@ -394,10 +387,7 @@ def list_pets(self) -> operations.ListPetsResponse:
   }
 ```
 
-</Tabs.Tab>
-<Tabs.Tab>
-
-```java
+```java !!tabs Java
   /**
    * ListPets - List all pets
    *
@@ -408,9 +398,7 @@ def list_pets(self) -> operations.ListPetsResponse:
   }
 ```
 
-</Tabs.Tab>
-<Tabs.Tab>
-```csharp
+```csharp !!tabs C#
   /// <summary>
   /// List all pets
   ///
@@ -423,8 +411,7 @@ def list_pets(self) -> operations.ListPetsResponse:
 
 **Note:** In C#, the operation comment will appear on the function definition on the interface, not the class itself.
 
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 If both the summary and description are present, the summary will be used as the first line of the comment and the description will be used as the second line of the comment. If just the description is present, it will be used as the first line of the comment. If both are present, but you would like to omit the description as it might be too verbose, you can use the `omitdescriptionifsummarypresent` option in your `gen.yaml` file, as follows:
 
@@ -455,20 +442,16 @@ components:
 
 The generated SDK will have a model commented like so:
 
-<Tabs items={['Go', 'Python', 'TS', 'Java', 'C#']}>
-  <Tabs.Tab>
+<CodeWithTabs>
 
-```go
+```go !!tabs Go
 // Pet
 // A pet sold in the pet store
 type Pet struct {
     // ...
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```python
+```python !!tabs Python
 @dataclass_json
 @dataclass
 class Pet:
@@ -478,10 +461,7 @@ class Pet:
     # ...
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```typescript
+```typescript !!tabs TypeScript
 // Pet
 /**
  * A pet sold in the pet store
@@ -490,10 +470,7 @@ export class Pet extends SpeakeasyBase {
     // ...
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```java
+```java !!tabs Java
 /**
  * Pet
  *
@@ -504,10 +481,7 @@ public class Pet {
 }
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-
-```csharp
+```csharp !!tabs C#
 /// <summary>
 /// A pet sold in the pet store
 /// </summary>
@@ -516,8 +490,7 @@ public class Pet {
 }
 ```
 
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ### Per-SDK Comments
 
