--- a/guides/openapi/additionalproperties.mdx
+++ b/guides/openapi/additionalproperties.mdx
@@ -35,39 +35,34 @@ components:
 
 This schema allows for the inclusion of any additional user-provided properties alongside the defined `title` and `description`.
 
-<Tabs items={['TypeScript', `Python`, `Golang`, `Java`]}>
-<Tabs.Tab>
-```typescript Typescript
+<CodeWithTabs>
+```typescript !!tabs TypeScript
 export type FlexibleObject = {
     title: string;
     description: string;
     additionalProperties: Record<string, any>;  // 👈 
 }
 
-````
-</Tabs.Tab>
-<Tabs.Tab>
-```python Python
+```
+
+```python !!tabs Python
 @dataclass
 class FlexibleObject:
     title: str = dataclasses.field(metadata={'dataclasses_json': { 'letter_case': utils.get_field_name('title') }})
     description:  str = dataclasses.field(metadata={'dataclasses_json': { 'letter_case': utils.get_field_name('description') }})
     additional_properties: Optional[Dict[str, Any]] = dataclasses.field(default=None, metadata={'dataclasses_json': { 'exclude': lambda f: f is None }}) // 👈 
 
-````
+```
 
-</Tabs.Tab>
-<Tabs.Tab>
-```go Go 
+```go !!tabs Go 
 type FlexibleObject struct {
 	Title                 string                 `json:"title"`
 	Description           string                `json:"description"`
 	AdditionalProperties map[string]interface{} `additionalProperties:"true" json:"-"`// 👈 
 }
 ```
-</Tabs.Tab>
-<Tabs.Tab>
-```java Java
+
+```java !!tabs Java
 public class FlexibleObject {
   public FlexibleObject(String title, String description) {...}
   public String title() {...}
@@ -76,8 +71,7 @@ public class FlexibleObject {
   ...
 }
 ```
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
 
 ## Using typed `additionalProperties`
 
@@ -99,40 +93,35 @@ components:
 
 In this schema, alongside the explicitly defined `name`, any additional properties must be strings, ensuring a consistent data type across all properties.
 
-<Tabs items={['TypeScript', `Python`, `Golang`, `Java`]}>
+<CodeWithTabs>
 
-<Tabs.Tab>
-```typescript Typescript
+```typescript !!tabs TypeScript
 export type StringOnlyObject = {
     title: string;
     description: string;
     additionalProperties: Record<string, string>;
 };
 
-````
-</Tabs.Tab>
-<Tabs.Tab>
-```python Python
+```
+
+```python !!tabs Python
 @dataclass
 class StringOnlyObject:
     title: str = dataclasses.field(metadata={'dataclasses_json': { 'letter_case': utils.get_field_name('title') }})
     description:  str = dataclasses.field(metadata={'dataclasses_json': { 'letter_case': utils.get_field_name('description') }})
     additional_properties: Optional[Dict[str, str]] = dataclasses.field(default=None, metadata={'dataclasses_json': { 'exclude': lambda f: f is None }})
 
-````
+```
 
-</Tabs.Tab>
-<Tabs.Tab>
-```go Go 
+```go !!tabs Go 
 type StringOnlyObject struct {
 	Title                 string                 `json:"title"`
 	Description           string                `json:"description"`
 	AdditionalProperties map[string]string `additionalProperties: type: string json:"-"`
 }
 ```
-</Tabs.Tab>
-<Tabs.Tab>
-```java Java
+
+```java !!tabs Java
 public class FlexibleObject {
   public FlexibleObject(String title, String description) {...}
   public String title() {...}
@@ -141,5 +130,4 @@ public class FlexibleObject {
   ...
 }
 ```
-</Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
