--- a/docs/customize/runtime/custom-http-client.mdx
+++ b/docs/customize/runtime/custom-http-client.mdx
@@ -12,12 +12,11 @@ SDK users can provide a custom HTTP client when initializing SDKs. This is usefu
 
 See below for per-language examples:
 
-<Tabs items={['Go','Python', 'Typescript', 'Java', 'C#']}>
-  <Tabs.Tab>
+<CodeWithTabs>
 
-The Go SDK will accept a client that implements a `Do(*http.Request) (*http.Response, error)` method similar to the standard library&apos;s `http.Client`.
+```go !!tabs Go
+/* The Go SDK will accept a client that implements a `Do(*http.Request) (*http.Response, error)` method similar to the standard library&apos;s `http.Client`. */
 
-```go
 // A custom HTTP client that implements caching
 c := NewCachedClient(&http.Client{}, cache)
 
@@ -28,12 +27,11 @@ opts := []sdk.SDKOption{
 s := sdk.New(opts)
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
+{/* TODO: Make sure mark is working */}
+```python !!tabs Python mark=7 
+# The Python SDK will accept any client that implements the `HttpClient` interface from the SDK. Here&apos;s an example using the [`requests`](https://requests.readthedocs.io/en/latest/) library:
 
-The Python SDK will accept any client that implements the `HttpClient` interface from the SDK. Here&apos;s an example using the [`requests`](https://requests.readthedocs.io/en/latest/) library:
 
-```python mark=7
 import requests
 from sdk import SDK, HttpClient
 
@@ -71,12 +69,10 @@ sdk = SDK(client=client)
 res = sdk.method_name()
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
+```typescript !!tabs TypeScript
+/* The TypeScript SDK makes API calls using an `HTTPClient` that wraps the native[Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API). This client is a thin wrapper around `fetch` and provides the ability to attach hooks around the request lifecycle that can be used to modify the request or handleerrors and response. */
 
-The TypeScript SDK makes API calls using an `HTTPClient` that wraps the native[Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API). This client is a thin wrapper around `fetch` and provides the ability to attach hooks around the request lifecycle that can be used to modify the request or handleerrors and response.
 
-```typescript
 import { SDK } from "openapi";
 import { HTTPClient } from "openapi/lib/http";
 
@@ -95,12 +91,10 @@ const sdk = new SDK({ httpClient });
 
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
 
-The Java SDK will accept a client that implements the `HTTPClient` interface in the `utils` package. This will wrap a `java.net.http.HttpClient` instance and the call to `send`.
+```java !!tabs Java
+/* The Java SDK will accept a client that implements the `HTTPClient` interface in the `utils` package. This will wrap a `java.net.http.HttpClient` instance and the call to `send`. */
 
-```java
 // Your custom HTTP client
 YouHttpClient client = new YourHttpClient();
 
@@ -111,13 +105,11 @@ builder.setClient(client);
 SDK sdk = builder.build();
 ```
 
-  </Tabs.Tab>
-  <Tabs.Tab>
-```csharp
-// YourHttpClient must implement the ISpeakeasyHttpClient interface
+```csharp !!tabs C#
+/* YourHttpClient must implement the ISpeakeasyHttpClient interface */
+
 var httpClient = new YourHttpClient();
 // Initialize the SDK with your custom HTTP client
 var sdk = new SDK(client: httpClient);
 ```
-  </Tabs.Tab>
-</Tabs>
+</CodeWithTabs>
