--- a/openapi-hub/file-uploads.mdx
+++ b/openapi-hub/file-uploads.mdx
@@ -60,17 +60,16 @@ paths:
 
 The client can call the endpoint to upload a PDF file with a metadata description like this:
 
-<Tabs items={['curl', 'Python']}>
-<Tabs.Tab>
-```bash curl
+<CodeWithTabs>
+
+```bash curl !!tabs curl
 curl -X POST "https://api.example.com/file/upload" \
      -H "Content-Type: multipart/form-data" \
      -F "file=@content.pdf" \
      -F "caption=Sample PDF file"
 ```
-</Tabs.Tab>
-<Tabs.Tab>
-```python Python
+
+```python Python !!tabs Python
 import requests
 
 url = "https://api.example.com/file/upload"
@@ -89,8 +88,8 @@ if response.status_code == 200:
 else:
     print(f"Failed to upload file: {response.status_code}"
 ```
-</Tabs.Tab>
-</Tabs>
+
+</CodeWithTabs>
 
 ### `application/octet-stream` (binary)
 
@@ -117,17 +116,15 @@ paths:
 
 The client can call the endpoint to upload an image file as follows:
 
-<Tabs items={['curl', 'Python']}>
-<Tabs.Tab>
-```bash curl
+<CodeWithTabs>
+
+```bash curl !!tabs curl
 curl -X POST "https://api.example.com/file/upload" \
      -H "Content-Type: application/octet-stream" \
      --data-binary "@image.jpg"
 ```
-</Tabs.Tab>
 
-<Tabs.Tab>
-```python Python
+```python Python !!tabs Python
 import requests
 
 url = "https://api.example.com/file/upload"
@@ -144,8 +141,8 @@ if response.status_code == 200:
 else:
     print(f"Failed to upload file: {response.status_code}")
 ```
-</Tabs.Tab>
-</Tabs>
+
+</CodeWithTabs>
 
 In curl, the `--data-binary` option sends raw file data in the HTTP request body, specified with `@` followed by the file path. Similarly, in Python, a file opened in binary mode (`rb`) is read and sent as a binary string.
 
@@ -180,17 +177,15 @@ paths:
 
 The client can call the endpoint using curl or Python as follows:
 
-<Tabs items={['curl', 'Python']}>
-<Tabs.Tab>
-```bash curl
+<CodeWithTabs>
+
+```bash curl !!tabs curl
 curl -X POST "https://api.example.com/file/upload" \
      -H "Content-Type: application/json" \
      -d '{"file": $(base64 image.jpg), "caption": "Sample JSON file"}'
 ```
-</Tabs.Tab>
 
-<Tabs.Tab>
-```python Python
+```python Python !!tabs Python
 import requests
 import base64
 
@@ -212,8 +207,8 @@ if response.status_code == 200:
 else:
     print(f"Failed to upload file: {response.status_code}")
 ```
-</Tabs.Tab>
-</Tabs>
+
+</CodeWithTabs>
 
 In this example, the file data is encoded in Base64 format and included in the JSON payload. The Python code reads the file data from a string variable and sends it as a JSON object in the request body.
 
